--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -46,6 +46,12 @@
           })
       });
     </script>
+    
+    <script>
+      function showDiv() {
+   document.getElementById('welcomeDiv').style.display = "block";
+}
+    </script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -134,12 +140,14 @@
                     {% for profile in profiles %}
                     <tr>
                         <td><a class="pointer" href="/tweets/{{profile.name}}"> {{ profile.name }} </a>
-                          <input type="hidden" name="test" value="/tweets/{{profile.name}}">
-                          <input name="test" value="/tweets/{{profile.name}}">
+                          <div id="myDiv" style="display:none;" class="answer_list" >
+                            <input type="button" name="answer" value="{{profile.name}}" onclick="showDiv()" />
+                          </div>
+                          
                       </td>
                       
                         <td>
-                            <a class="pointer" title="Edit profile" onclick="editProfile({{ profile.id }}, '{{ profile.name }}')"><span class="glyphicon glyphicon-pencil"></span></a> &emsp;
+                            <a class="pointer" title="Edit profile" onclick="editProfile({{ profile.id }}, '{{ profile.name }}');showDiv();"><span class="glyphicon glyphicon-pencil"></span></a> &emsp;
                             <a class="pointer" title="Delete profile" onclick="deleteProfile({{ profile.id }})"><span class="glyphicon glyphicon-trash"></span></a>
                         </td>
                     </tr>
