--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -141,7 +141,7 @@
                     <tr>
                         <td><a class="pointer" href="/tweets/{{profile.name}}"> {{ profile.name }} </a>
                           <div id="myDiv" style="display:none;" class="answer_list" >
-                            <input type="button" name="answer" value="{{profile.name}}" onclick="showDiv()" />
+                            <input type="button" name="answer" value="{{profile.name}}"/>
                           </div>
                           
                       </td>
