--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -147,7 +147,7 @@
                       </td>
                       
                         <td>
-                            <a class="pointer" title="Edit profile" onclick="editProfile({{ profile.id }}, '{{ profile.name }}');showDiv();"><span class="glyphicon glyphicon-pencil"></span></a> &emsp;
+                            <a class="pointer" title="Edit profile" onclick="showDiv();"><span class="glyphicon glyphicon-pencil"></span></a> &emsp;
                             <a class="pointer" title="Delete profile" onclick="deleteProfile({{ profile.id }})"><span class="glyphicon glyphicon-trash"></span></a>
                         </td>
                     </tr>
