--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -140,8 +140,8 @@
                     {% for profile in profiles %}
                     <tr>
                         <td><a class="pointer" href="/tweets/{{profile.name}}"> {{ profile.name }} </a>
-                          <div id="myDiv" style="display:none;" class="answer_list" >
-                            <input type="button" name="answer" value="{{profile.name}}"/>
+                          <div id="myDiv" style="display:none;" class="answer_list" >HELLO
+                            <input type="input" name="answer" value="{{profile.name}}"/>
                           </div>
                           
                       </td>
