--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -49,7 +49,7 @@
     
     <script>
       function showDiv() {
-   document.getElementById('welcomeDiv').style.display = "block";
+   document.getElementById('myDiv').style.display = "block";
 }
     </script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
