--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -142,7 +142,7 @@
                         <td><a class="pointer" href="/tweets/{{profile.name}}"> {{ profile.name }} </a>
                           <div id="myDiv" style="display:none;" class="answer_list" >
                             <input type="input" name="answer" id="profid" value="{{profile.name}}"/>
-                            <input id="clickMe" type="button" value="clickme" onclick="editProfile({{ profile.id }}, '{{ profile.name }}');" />
+                            <input id="clickMe" type="button" value="Update" onclick="editProfile({{ profile.id }}, '{{ profile.name }}');" />
                           </div>
                           
                       </td>
