--- a/templates/show_all.html
+++ b/templates/show_all.html
@@ -115,7 +115,7 @@
                         <th>Name</th>
                         <th>Date</th>
                         <th>CVE</th>
-                        <th>Score</th>
+                        <th>ScoreSS</th>
                         <th>Source</th>
                     </tr>
                 </thead>
