--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -129,7 +129,7 @@
                       <th>Tweet</th>
                       <th>Date</th>
                       <th>Cve</th>
-                      <th>ScoreEE</th>
+                      <th>Score</th>
                       <th>Url</th>
                   </tr>
               </thead>
