--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -134,12 +134,14 @@
                   </tr>
               </thead>
               <tbody>
-                  {% for y in tweets %}
+                {% for vuln in vulns %}
+                {% set mylist = vuln.name.split(',') %}
+                {% if vuln.source == 'securityfocus' or vuln.source == 'fulldisclosure'  %} 
                   <tr>
-                      <td>{{ y.tweet }}</td>            
-                      <td>{{ y.date }}</td>
-                      <td>{{ y.cve }}</td>
-                      <td>{{ y.score }}</td>
+                      <td>{{ vuln.tweet }}</td>            
+                      <td>{{ vuln.date }}</td>
+                      <td>{{ vuln.cve }}</td>
+                      <td>[{{ vuln.score }}]</td>
                   <td><a href="{{ y.url }}"> {{ y.url }} </a></td>
                   </tr>
                   {% endfor %} 
