--- a/templates/show_all_tweets33.html
+++ b/templates/show_all_tweets33.html
@@ -60,7 +60,7 @@
                 <th>Tweet</th>
                 <th>Date</th>
                 <th>Cve</th>
-                <th>Score</th>
+                <th>Score--</th>
 		        <th>Url</th>
             </tr>
         </thead>
