--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -139,7 +139,9 @@
                       <td>{{ y.tweet }}</td>            
                       <td>{{ y.date }}</td>
                       <td>{{ y.cve }}</td>
-                      <td>{{ y.score }}</td>
+                    {{ sco = y.score}}
+                    {{ sco = sco.split(" ",1) }}
+                      <td>{{ sco }}</td>
                   <td><a href="{{ y.url }}"> {{ y.url }} </a></td>
                   </tr>
                   {% endfor %} 
