--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -135,11 +135,12 @@
               </thead>
               <tbody>
                   {% for y in tweets %}
+                {% if y.cve == "": y.score = y.score.split(' ', 1)[1] %}
                   <tr>
                       <td>{{ y.tweet }}</td>            
                       <td>{{ y.date }}</td>
                       <td>{{ y.cve }}</td>
-                      <td>{{ y.score.split(' ', 1)[1] }}</td>
+                      <td>{{ y.score}</td>
                   <td><a href="{{ y.url }}"> {{ y.url }} </a></td>
                   </tr>
                   {% endfor %} 
