--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -136,6 +136,7 @@
               <tbody>
                   {% for y in tweets %}
                 {% y.score = y.score.split(' ', 1)[1] if y.cve == "" %}
+                
                   <tr>
                       <td>{{ y.tweet }}</td>            
                       <td>{{ y.date }}</td>
@@ -143,6 +144,7 @@
                       <td>{{ y.score}</td>
                   <td><a href="{{ y.url }}"> {{ y.url }} </a></td>
                   </tr>
+                {% endif %}
                   {% endfor %} 
       
                   </tr>
