--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -141,9 +141,20 @@
                       <td>{{ y.tweet }}</td>            
                       <td>{{ y.date }}</td>
                       <td>{{ y.cve }}</td>
+                      <td>{{ y.score.split(' ', 1)[1] }}</td>
+                  <td><a href="{{ y.url }}"> {{ y.url }} </a></td>
+                  </tr>
+                
+                {% else %}
+                
+                <tr>
+                      <td>{{ y.tweet }}</td>            
+                      <td>{{ y.date }}</td>
+                      <td>{{ y.cve }}</td>
                       <td>{{ y.score }}</td>
                   <td><a href="{{ y.url }}"> {{ y.url }} </a></td>
                   </tr>
+                
                 {% endif %}
                   {% endfor %} 
       
