--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -43,9 +43,9 @@
         $(document).ready(function() {     
           $.fn.dataTable.moment( 'MMM DD YYYY' );
           $('#example2').DataTable( {
-              "order": [[ 3, "asc" ]]
+              "order": [[ 3, "dsc" ]]
           },{
-              "order": [[ 1, "asc" ]] 
+              "order": [[ 1, "dsc" ]] 
           });
       });
 
