--- a/templates/show_all_tweets.html
+++ b/templates/show_all_tweets.html
@@ -43,7 +43,7 @@
         $(document).ready(function() {     
           $.fn.dataTable.moment( 'MMM DD YYYY' );
           $('#example2').DataTable( {
-              "order": [[ 3, "dsc" ]]
+              "order": [[ 3, "asc" ]]
           },{
               "order": [[ 1, "dsc" ]] 
           });
