--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -81,7 +81,7 @@
             
             <div class="navbar-custom-menu">
               <ul class="nav navbar-nav pull-right">
-                <li> class="active"><a href="#">Profiles</a></li>
+                <li class="active"><a href="#">Profiles</a></li>
                 <li><a href="{{ url_for('show_all') }}">Blogs and Forums</a></li>
                 <li><a href="{{ url_for('show_all_tweets') }}">Social Networks</a>
                 </li>
